--- a/demo-web-app/index.html
+++ b/demo-web-app/index.html
@@ -10,5 +10,13 @@
 <div id="main"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 <script type="text/javascript" src="target/scala-2.12/scalajs-bundler/main/demo-web-app-fastopt-bundle.js"></script>
+
+<script>
+    // Required for Materialize select elements
+    document.addEventListener('DOMContentLoaded', function() {
+        var elems = document.querySelectorAll('select');
+        var instances = M.FormSelect.init(elems, {});
+    });
+</script>
 </body>
 </html>
